configuracion de perfil

--- a/Perchero/Views/Manage/ChangePassword.cshtml
+++ b/Perchero/Views/Manage/ChangePassword.cshtml
@@ -3,38 +3,60 @@
     ViewBag.Title = "Cambiar contraseña";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="contentpanel">
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Formulario para cambiar la contraseña</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
+    <ol class="breadcrumb breadcrumb-quirk">
+        <li>
+            <a href="@Url.Action("Index","Home")"><i class="fa fa-home mr5"></i> Inicio</a>
+        </li>
+        <li class="active"> Mi Perfil</li>
+    </ol>
+    <div class="panel panel-primary panel-profile list-view">
+        <div class="panel-heading">
+            <div class="media">
+                <div class="media-body">
+                    <h4 class="media-heading" style="color: white;">
+                        <i class="fa fa-key"></i> @ViewBag.Title
+                        <div class="pull-right">
+                            @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default btn-xs" })
+                        </div>
+                    </h4>
+                </div>
+            </div><!-- media -->
+        </div><!-- panel-heading -->
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="panel-body">
+                <div class="form-group">
+                    @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-3  has-warning">
+                        @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-3   has-warning">
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-3 has-warning">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-12">
+                        <input type="submit" value="Cambiar contraseña" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Cambiar contraseña" class="btn btn-default" />
-        </div>
-    </div>
-}
+</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
