--- a/Perchero/Views/Talles/Details.cshtml
+++ b/Perchero/Views/Talles/Details.cshtml
@@ -113,19 +113,19 @@
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.PuñoAjustado)
+                @Html.DisplayNameFor(model => model.PunhoAjustado)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.PuñoAjustado)
+                @Html.DisplayFor(model => model.PunhoAjustado)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.PuñoFlojo)
+                @Html.DisplayNameFor(model => model.PunhoFlojo)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.PuñoFlojo)
+                @Html.DisplayFor(model => model.PunhoFlojo)
             </dd>
     
             <dt>
