--- a/Perchero/Views/Talles/Index.cshtml
+++ b/Perchero/Views/Talles/Index.cshtml
@@ -50,10 +50,10 @@
                 @Html.DisplayNameFor(model => model.ContornoBrazo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PuñoAjustado)
+                @Html.DisplayNameFor(model => model.PunhoAjustado)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PuñoFlojo)
+                @Html.DisplayNameFor(model => model.PunhoFlojo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TalleEspalda)
@@ -121,10 +121,10 @@
                 @Html.DisplayFor(modelItem => item.ContornoBrazo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PuñoAjustado)
+                @Html.DisplayFor(modelItem => item.PunhoAjustado)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PuñoFlojo)
+                @Html.DisplayFor(modelItem => item.PunhoFlojo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TalleEspalda)
