--- a/Perchero/Views/Avios/Create.cshtml
+++ b/Perchero/Views/Avios/Create.cshtml
@@ -22,31 +22,31 @@
                     <div class="pull-right">
                         @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default btn-xs" })
                     </div>
+                    <div class="pull-right">
+                        <p>||</p>
+                    </div>
+                    <div class="pull-right">
+                        <input type="submit" value="Crear" class="btn btn-xs btn-success" style="width:120%;" />
+                    </div>
                 </h4>
                 <p></p>
             </div>
             <div class="panel-body form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    <div class="col-lg-6">
+                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <div class="pull-right">
-                            <input type="submit" value="Crear" class="btn btn-success" />
+                    <div class="col-lg-6">
+                        @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control", @placeholder="precio por unidad" } })
+                            @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
