--- a/Perchero/Views/Prendas/Index.cshtml
+++ b/Perchero/Views/Prendas/Index.cshtml
@@ -66,9 +66,13 @@
                                         <img class="img-circle img-frame" width="40" src="@Url.Content("~/Content/imgprenda/imgprev/"+item.Imagen+"/"+item.Imagen+".png")" />
                                     </span>
                                 </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Talle)
-                                </td>
+                                    @{
+                                        foreach (var a in item.TallePrendas)
+                                        {
+                                            <td>@a.NUmeroTalle</td>
+
+                                        }
+                                    }
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Vitrina)
                                 </td>
