--- a/Perchero/Views/TallePrendas/Edit.cshtml
+++ b/Perchero/Views/TallePrendas/Edit.cshtml
@@ -135,18 +135,18 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.PuñoAjustado, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PunhoAjustado, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PuñoAjustado, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PuñoAjustado, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.PunhoAjustado, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PunhoAjustado, "", new { @class = "text-danger" })
                 </div>
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.PuñoFlojo, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PunhoFlojo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PuñoFlojo, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PuñoFlojo, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.PunhoFlojo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PunhoFlojo, "", new { @class = "text-danger" })
                 </div>
             </div>
     
