--- a/Perchero/Views/TallePrendas/Index.cshtml
+++ b/Perchero/Views/TallePrendas/Index.cshtml
@@ -60,10 +60,10 @@
                 @Html.DisplayNameFor(model => model.ContornoBrazo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PuñoAjustado)
+                @Html.DisplayNameFor(model => model.PunhoAjustado)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PuñoFlojo)
+                @Html.DisplayNameFor(model => model.PunhoFlojo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TalleEspalda)
@@ -137,10 +137,10 @@
                 @Html.DisplayFor(modelItem => item.ContornoBrazo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PuñoAjustado)
+                @Html.DisplayFor(modelItem => item.PunhoAjustado)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PuñoFlojo)
+                @Html.DisplayFor(modelItem => item.PunhoFlojo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TalleEspalda)
